# zeroshot-learning

./: .gitignore  README.md  Zero_Shot_learning_experiment.ipynb  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci_testing.yml  main.yaml  upload_pypi.yaml
pyt/: __init__.py
tests/: tests.py
