[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyt"
authors = [{name = "Gagan Bhatia", email = "gbhatia880@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.6"
requires = [


]

[project.urls]
Home = "https://github.com/gagan3012/pyt"


[tool.flit.metadata.requires-extra]
style = ["black", "isort", "nbstripout"]
test = [
    "pytest",
    "coverage",
]
